fix: 보안 설정 정비 및 엔티티 기본값 미적용 버그 수정
레거시 보안 설정과 운영 중 확인된 결함을 정리하고, DB 없이 도는 테스트를 추가해
CI에서 검증되도록 함

보안
- CORS: allowedOriginPatterns("*") + allowCredentials(true) 조합으로 임의 출처가
  credentialed 요청을 보내고 응답까지 읽을 수 있던 문제 수정. 운영 도메인과
  로컬 개발 주소로 한정
- 공개 경로를 SecurityWhitelist 한 곳으로 통합. WebSecurityConfig와
  TokenAuthenticationFilter가 서로 다른 목록을 들고 있어 /actuator/health가
  403이 되면서 서버 생존 확인 수단이 없었음
- /api/v1/** 와일드카드 permitAll 제거 (해당 경로 신설 시 자동 공개되는 지뢰)
- 샘플 엔드포인트 /api/test 및 SampleController 제거
- actuator 노출을 health,info,prometheus로 제한 (기존 "*"는 env·beans까지 공개)
- JWT 클레임 전문을 매 요청 INFO로 남기던 로깅 제거

버그
- @Builder가 필드 초기값을 무시해 characterName 기본값 "주인공"이 적용되지 않고
  null이 저장되던 문제 수정. 빌더에 null을 명시 전달하는 경로도 함께 보완
- 사용되지 않는 Member.refreshToken 컬럼과 updateRefreshToken() 제거
  (리프레시 토큰 정본은 refresh_token 테이블)
- MemberService에 트랜잭션 경계 지정

운영
- 배포 시 로그 레벨을 환경변수로 INFO 고정. 운영 로그의 60% 이상이 DEBUG 소음이었음
- 테스트 11건 추가(H2 기반)하고 CI에서 -x test 제거