@@ -4,7 +4,7 @@ import com.suhsaechan.dongbanza.common.jwt.filter.TokenAuthenticationFilter;
 import com.suhsaechan.dongbanza.common.jwt.service.CustomUserDetailsService;
 import com.suhsaechan.dongbanza.common.jwt.service.JwtUtil;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -52,18 +52,8 @@ public class WebSecurityConfig {
             .formLogin(AbstractHttpConfigurer::disable)
 
             .authorizeHttpRequests((authorize) -> authorize
-                .requestMatchers(
-                    "/", // 기본화면
-                    "/api/signup", // 회원가입
-                    "/api/login", // 로그인
-                    "/docs/**", // Swagger
-                    "/v3/api-docs/**", // Swagger
-                    "/api/token", // Access Token 재발급
-                    "/actuator/prometheus", // Prometheus 엔드포인트 허용
-                    "/favicon.ico", // Prometheus
-                    "/api/v1/**",
-                    "/api/test"
-                ).permitAll()
+                // 공개 경로는 SecurityWhitelist 한 곳에서만 관리한다 (필터와 공유)
+                .requestMatchers(SecurityWhitelist.PATHS).permitAll()
                 .requestMatchers(HttpMethod.GET, "/api/my-page").hasAuthority(MEMBER)
                 .requestMatchers(HttpMethod.POST, "/api/game/over").hasAuthority(MEMBER)
                 .requestMatchers(HttpMethod.GET, "/api/game/my-results").hasAuthority(MEMBER)
@@ -71,16 +61,7 @@ public class WebSecurityConfig {
                 .anyRequest().authenticated()
             )
 
-            // 폼 로그인 (현재사용안함)
-//        .formLogin(formLogin -> formLogin
-//            .loginPage("/login")
-//            .defaultSuccessUrl("/home")
-//        )
-
-            .logout(logout -> logout
-                .logoutSuccessUrl("/login")
-                .invalidateHttpSession(true)
-            )
+            // JWT 무상태 API라 세션 기반 로그아웃 설정은 의미가 없어 제거함
             .sessionManagement(session -> session
                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .addFilterBefore(new TokenAuthenticationFilter(jwtUtil),
@@ -98,14 +79,22 @@ public class WebSecurityConfig {
     return new ProviderManager(authProvider);
   }
 
+  // allowCredentials(true)와 "*"를 함께 쓰면 Spring이 요청 Origin을 그대로 반사한다.
+  // 즉 임의의 사이트가 사용자 브라우저로 이 API를 호출하고 응답까지 읽을 수 있어 출처를 명시한다.
+  private static final List<String> ALLOWED_ORIGIN_PATTERNS = List.of(
+      "https://bagel.suhsaechan.kr",  // 운영 프론트엔드
+      "http://localhost:[*]",         // 로컬 개발 (포트 무관)
+      "http://127.0.0.1:[*]"
+  );
+
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOriginPatterns(Collections.singletonList("*")); // 모든 origin 허용
+    configuration.setAllowedOriginPatterns(ALLOWED_ORIGIN_PATTERNS);
     configuration.setAllowedMethods(
         Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
     configuration.setAllowCredentials(true);
-    configuration.setAllowedHeaders(Collections.singletonList("*"));
+    configuration.setAllowedHeaders(List.of("*"));
     configuration.setExposedHeaders(Arrays.asList("Authorization")); // Authorization 헤더 노출
     configuration.setMaxAge(3600L);
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
